--- a/WindowExplorer/Sources/Controllers/InfoViewController/Info.storyboard
+++ b/WindowExplorer/Sources/Controllers/InfoViewController/Info.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="d75-j9-9Ky">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="d75-j9-9Ky">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14113"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14313.18"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -15,13 +15,13 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <scrollView wantsLayer="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" horizontalScrollElasticity="none" translatesAutoresizingMaskIntoConstraints="NO" id="tdf-F3-S6C" customClass="FadingScrollView" customModule="WindowExplorer" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="500" height="800"/>
+                                <rect key="frame" x="0.0" y="80" width="500" height="720"/>
                                 <clipView key="contentView" drawsBackground="NO" id="y4f-pW-mZI">
-                                    <rect key="frame" x="0.0" y="0.0" width="500" height="800"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="500" height="720"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <collectionView id="y0x-55-DgY">
-                                            <rect key="frame" x="0.0" y="0.0" width="500" height="800"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="500" height="720"/>
                                             <autoresizingMask key="autoresizingMask" heightSizable="YES"/>
                                             <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" id="xsp-KK-kEW">
                                                 <size key="itemSize" width="50" height="50"/>
@@ -35,11 +35,11 @@
                                     </subviews>
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </clipView>
-                                <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="zOF-p6-fVF">
+                                <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="zOF-p6-fVF">
                                     <rect key="frame" x="-100" y="-100" width="398" height="16"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
-                                <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="mDA-El-UDL">
+                                <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="mDA-El-UDL">
                                     <rect key="frame" x="-100" y="-100" width="16" height="263"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
@@ -81,15 +81,33 @@
                                     <constraint firstAttribute="trailing" secondItem="HQE-9P-TgY" secondAttribute="trailing" id="oyW-ve-rY8"/>
                                 </constraints>
                             </customView>
+                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="QYL-XR-Sxh" customClass="ImageView" customModule="WindowExplorer" customModuleProvider="target">
+                                <rect key="frame" x="440" y="20" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="WtB-e8-dqa"/>
+                                    <constraint firstAttribute="height" constant="40" id="fwE-dw-Vln"/>
+                                </constraints>
+                            </customView>
+                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="BdA-Vq-uET" customClass="ImageView" customModule="WindowExplorer" customModuleProvider="target">
+                                <rect key="frame" x="20" y="20" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="KjF-z0-CSr"/>
+                                    <constraint firstAttribute="height" constant="40" id="dm7-RV-835"/>
+                                </constraints>
+                            </customView>
                         </subviews>
                         <constraints>
                             <constraint firstItem="6RX-75-PTJ" firstAttribute="leading" secondItem="YEQ-Hb-AYS" secondAttribute="leading" id="45e-qs-luc"/>
                             <constraint firstAttribute="trailing" secondItem="6RX-75-PTJ" secondAttribute="trailing" id="73E-eA-4M5"/>
+                            <constraint firstAttribute="bottom" secondItem="BdA-Vq-uET" secondAttribute="bottom" constant="20" id="AlT-YC-pSX"/>
                             <constraint firstItem="tdf-F3-S6C" firstAttribute="leading" secondItem="YEQ-Hb-AYS" secondAttribute="leading" id="FeZ-32-XjI"/>
                             <constraint firstAttribute="trailing" secondItem="tdf-F3-S6C" secondAttribute="trailing" id="HwZ-pr-WeU"/>
                             <constraint firstItem="tdf-F3-S6C" firstAttribute="top" secondItem="YEQ-Hb-AYS" secondAttribute="top" id="JqM-OO-ESX"/>
+                            <constraint firstItem="BdA-Vq-uET" firstAttribute="top" secondItem="tdf-F3-S6C" secondAttribute="bottom" constant="20" id="MOC-QM-xIA"/>
                             <constraint firstItem="6RX-75-PTJ" firstAttribute="top" secondItem="YEQ-Hb-AYS" secondAttribute="top" constant="40" id="PiS-bR-3Bc"/>
-                            <constraint firstAttribute="bottom" secondItem="tdf-F3-S6C" secondAttribute="bottom" id="XyJ-nw-FmT"/>
+                            <constraint firstItem="BdA-Vq-uET" firstAttribute="leading" secondItem="YEQ-Hb-AYS" secondAttribute="leading" constant="20" id="bHG-Lk-6rl"/>
+                            <constraint firstAttribute="trailing" secondItem="QYL-XR-Sxh" secondAttribute="trailing" constant="20" id="e0o-S3-ykk"/>
+                            <constraint firstAttribute="bottom" secondItem="QYL-XR-Sxh" secondAttribute="bottom" constant="20" id="faj-Rq-U1z"/>
                         </constraints>
                     </view>
                     <connections>
@@ -98,6 +116,8 @@
                         <outlet property="infoScrollView" destination="tdf-F3-S6C" id="x6B-tW-gsv"/>
                         <outlet property="playerControlArea" destination="HQE-9P-TgY" id="xOD-ol-Hf5"/>
                         <outlet property="toggleButtonArea" destination="ZBP-MK-oH9" id="gwk-3h-kvg"/>
+                        <outlet property="toggleLeftButton" destination="BdA-Vq-uET" id="vTV-xl-jHl"/>
+                        <outlet property="toggleRightButton" destination="QYL-XR-Sxh" id="STb-R9-EVi"/>
                         <outlet property="volumeButtonArea" destination="ccU-RN-9cA" id="fGW-Oe-fKB"/>
                     </connections>
                 </viewController>
